--- a/views/vista.hbs
+++ b/views/vista.hbs
@@ -45,6 +45,7 @@
         <!-- <input type="submit" id="boton-enviar" onclick="location.href = '/api/productos/listar'" value="Enviar"> -->
     </form>
 
+    <!-- TABLA DE PRODUCTOS -->
     <div id="tabla"></div>
 
     <div id="centro-mensajes">
